--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,10 +11,12 @@ Description: Utility functions that may be of general interest but are
     functions for working with file paths include 'abs2rel', 'split_path' 
     and 'common_path'. Finally there are utility functions for working with 
     'zip' and 'gzip' files including integrity tests.
-Imports: utils
+Imports: 
+    utils,
+    checkmate
 Suggests:
     testthat (>= 0.9),
     roxygen2
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.0
 Encoding: UTF-8
 ByteCompile: true
